testsuite/tests/rename/should_fail/T21605b.hs
{-# LANGUAGE DataKinds #-}
module T21605b where

import Prelude

wrongSig :: Prelude.true
wrongSig = undefined
